# simple-c-quiz-game

./: CMakeLists.txt  README.md
include/: main.h
src/: CMakeLists.txt  main.c
